--- a/appspec.yml
+++ b/appspec.yml
@@ -7,3 +7,6 @@ hooks:
   ApplicationStart:
     - location: bin/ApplicationStart.sh
       timeout: 180
+  AfterInstall:
+    - location: bin/AfterInstall.sh
+      timeout: 180
