--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "gulp-util": "^3.0.7",
     "gutil": "^1.6.4",
     "koa": "^1.2.1",
+    "koa-body-parser": "^1.1.2",
+    "koa-generic-session": "^1.11.3",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
+    "socket.io": "^1.4.8",
     "three": "^0.80.1",
     "underscore": "^1.8.3",
     "webpack": "^1.13.2",
