--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "vrshow",
   "version": "0.0.0",
-  "contributors": ["Tony Marsico", "Eric Mickelsen"],
+  "contributors": [
+    "Tony Marsico",
+    "Eric Mickelsen"
+  ],
   "scripts": {
     "start": "gulp dev",
     "gulp": "gulp"
@@ -16,6 +19,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "del": "^2.2.2",
+    "fast-simplex-noise": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "gutil": "^1.6.4",
@@ -24,11 +28,14 @@
     "koa-generic-session": "^1.11.3",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
+    "lru": "^3.1.0",
+    "pngjs": "^3.0.0",
+    "seedrandom": "^2.4.2",
     "socket.io": "^1.4.8",
-    "three": "^0.80.1",
+    "three": "^0.81.2",
     "underscore": "^1.8.3",
-    "webrtc-adapter": "^2.0.0",
     "webpack": "^1.13.2",
-    "webvr-polyfill": "^0.9.18"
+    "webrtc-adapter": "^2.0.0",
+    "webvr-polyfill": "^0.9.3"
   }
 }
