--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "seedrandom": "^2.4.2",
     "socket.io": "^1.4.8",
     "stats.js": "^0.17.0",
-    "three": "^0.84.0",
+    "three": "^0.88.0",
+    "three-mtl-loader": "^1.0.2",
+    "three-obj-loader": "^1.1.3",
     "underscore": "^1.8.3",
     "webpack": "^3.10.0",
     "webrtc-adapter": "^3.1.3",
