--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "forever": "0.x"
   },
   "dependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "del": "^2.2.2",
-    "fast-simplex-noise": "^3.2.0",
-    "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7",
+    "fast-simplex-noise": "3.2.0",
+    "gulp": "^4.0.2",
     "gutil": "^1.6.4",
-    "koa": "^1.2.1",
+    "koa": "^1.7.0",
     "koa-body-parser": "^1.1.2",
-    "koa-generic-session": "^1.11.3",
+    "koa-generic-session": "^1.11.7",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
     "lru": "^3.1.0",
-    "pngjs": "^3.0.0",
-    "seedrandom": "^2.4.2",
-    "socket.io": "^1.4.8",
+    "plugin-error": "^1.0.1",
+    "pngjs": "^3.4.0",
+    "seedrandom": "^2.4.4",
+    "socket.io": "^2.3.0",
     "stats.js": "^0.17.0",
     "three": "^0.84.0",
-    "underscore": "^1.8.3",
-    "webpack": "^3.10.0",
+    "underscore": "^1.11.0",
+    "webpack": "^4.44.2",
     "webrtc-adapter": "^3.1.3",
-    "webvr-polyfill": "^0.9.3"
+    "webvr-polyfill": "^0.9.41"
   }
 }
